--- a/conf/meph-v2.yaml
+++ b/conf/meph-v2.yaml
@@ -1,5 +1,5 @@
 # kernel entries are a list of
-#   kernel-release, arch, primary-subarch, flavor, subarches
+#   kernel-release, arch, primary-subarch, flavor, kernel-pkgname, subarches
 # we use the anchors to make subarches more compact
 #
 # default_kernel is "builtin" kernel.
@@ -20,31 +20,31 @@ releases:
  - version: 14.04
    release: trusty
    kernels:
-    - [trusty,  armhf,   hwe-t,    generic,   *arm_hwe_t]
-    - [trusty,  armhf,   *glpae,   *glpae,    [*glpae]]
-    - [trusty,  i386,    hwe-t,    generic,   *sa_hwe_t]
-    - [trusty,  amd64,   hwe-t,    generic,   *sa_hwe_t]
-    - [trusty,  ppc64el, hwe-t,    generic,   *sa_hwe_t]
+    - [trusty,  armhf,   hwe-t,    generic,   linux-generic,            *arm_hwe_t]
+    - [trusty,  armhf,   *glpae,   *glpae,    linux-generic-lpae,       [*glpae]]
+    - [trusty,  i386,    hwe-t,    generic,   linux-generic,            *sa_hwe_t]
+    - [trusty,  amd64,   hwe-t,    generic,   linux-generic,            *sa_hwe_t]
+    - [trusty,  ppc64el, hwe-t,    generic,   linux-generic,            *sa_hwe_t]
  - version: 13.10
    release: saucy
    kernels:
-    - [saucy,   armhf,   hwe-s,    generic,   *sa_hwe_s]
-    - [saucy,   armhf,   *glpae,   *glpae,    [*glpae]]
-    - [saucy,   i386,    hwe-t,    generic,   *sa_hwe_t]
-    - [saucy,   amd64,   hwe-t,    generic,   *sa_hwe_t]
+    - [saucy,   armhf,   hwe-s,    generic,   linux-generic,            *sa_hwe_s]
+    - [saucy,   armhf,   *glpae,   *glpae,    linux-generic-lpae,       [*glpae]]
+    - [saucy,   i386,    hwe-s,    generic,   linux-generic,            *sa_hwe_t]
+    - [saucy,   amd64,   hwe-s,    generic,   linux-generic,            *sa_hwe_t]
  - version: 12.04
    release: precise
    default_kernel: {armhf: linux-highbank}
    kernels:
-    - [precise, i386,    hwe-p,    generic,   *sa_hwe_p]
-    - [precise, amd64,   hwe-p,    generic,   *sa_hwe_p]
-    - [precise, armhf,   highbank, highbank,  [highbank]]
-    - [quantal, i386,    hwe-q,    generic,   *sa_hwe_q]
-    - [quantal, amd64,   hwe-q,    generic,   *sa_hwe_q]
-    - [raring,  i386,    hwe-r,    generic,   *sa_hwe_r]
-    - [raring,  amd64,   hwe-r,    generic,   *sa_hwe_r]
-    - [saucy,   i386,    hwe-s,    generic,   *sa_hwe_s]
-    - [saucy,   amd64,   hwe-s,    generic,   *sa_hwe_s]
+    - [precise, i386,    hwe-p,    generic,  linux-generic,             *sa_hwe_p]
+    - [precise, amd64,   hwe-p,    generic,  linux-generic,             *sa_hwe_p]
+    - [precise, armhf,   highbank, highbank, linux-highbank,            [highbank]]
+    - [quantal, i386,    hwe-q,    generic,  linux-generic-lts-quantal, *sa_hwe_q]
+    - [quantal, amd64,   hwe-q,    generic,  linux-generic-lts-quantal, *sa_hwe_q]
+    - [raring,  i386,    hwe-r,    generic,  linux-generic-lts-raring,  *sa_hwe_r]
+    - [raring,  amd64,   hwe-r,    generic,  linux-generic-lts-raring,  *sa_hwe_r]
+    - [saucy,   i386,    hwe-s,    generic,  linux-generic-lts-saucy,   *sa_hwe_s]
+    - [saucy,   amd64,   hwe-s,    generic,  linux-generic-lts-saucy,   *sa_hwe_s]
 
 ## Notes:
 ##  * there are no hwe installer kernels for armhf
