support building for arm64, and enable kernels there.
bzr-revno: 100

--- a/conf/meph-v2.yaml
+++ b/conf/meph-v2.yaml
@@ -25,6 +25,7 @@ releases:
     - [trusty,  i386,    hwe-t,    generic,   linux-generic,            *sa_hwe_t]
     - [trusty,  amd64,   hwe-t,    generic,   linux-generic,            *sa_hwe_t]
     - [trusty,  ppc64el, hwe-t,    generic,   linux-generic,            *sa_hwe_t]
+    - [trusty,  arm64,   hwe-t,    generic,   linux-generic,            *sa_hwe_t]
  - version: 13.10
    release: saucy
    kernels:
