add support for linux-keystone (subarch=slayton)
The one tag-along here is resizing the filesystem in the mounted
image to accomodate the fact that in that image,
apt-get install of linux-keystone ended up doing::
  After this operation, 205 MB of additional disk space will be used.

And it would not fit.  That, coupled with the temporary initramfs
space caused out of space. Another thing we could do would be to bind mount
something over /tmp.

bzr-revno: 169

--- a/conf/meph-v2.yaml
+++ b/conf/meph-v2.yaml
@@ -37,6 +37,7 @@ releases:
    kernels:
     - [trusty,  armhf,   hwe-t,    generic,   linux-generic,            *arm_hwe_t]
     - [trusty,  armhf,   *glpae,   *glpae,    linux-generic-lpae,       [*glpae]]
+    - [trusty,  armhf,   slayton,  keystone,  linux-keystone,           [slayton]]
     - [trusty,  i386,    hwe-t,    generic,   linux-generic,            *sa_hwe_t]
     - [trusty,  amd64,   hwe-t,    generic,   linux-generic,            *sa_hwe_t]
     - [trusty,  ppc64el, hwe-t,    generic,   linux-generic,            *sa_hwe_t]
