--- a/conf/meph-v2.yaml
+++ b/conf/meph-v2.yaml
@@ -55,6 +55,9 @@ releases:
     - [trusty,  arm64,   hwe-t,    generic,   linux-generic,            *sa_hwe_t]
     - [trusty,  arm64,   *xguboot, generic,   linux-generic,            [*xguboot],
        {suffix: .xgene, kihelper: kh-xgene, di-format: 'xgene'}]
+#    - [utopic,  i386,    hwe-u,    generic,  linux-generic-lts-utopic,  *sa_hwe_u]
+#    - [utopic,  amd64,   hwe-u,    generic,  linux-generic-lts-utopic,  *sa_hwe_u]
+
  - version: 13.10
    release: saucy
    kernels:
