--- a/conf/meph-v2.yaml
+++ b/conf/meph-v2.yaml
@@ -23,6 +23,7 @@ subarches:
 misc:
  - &glpae generic-lpae
  - &xguboot xgene-uboot
+ - &xgmstuboot xgene-uboot-mustang
 
 releases:
  - version: 15.04
@@ -55,6 +56,8 @@ releases:
     - [trusty,  arm64,   hwe-t,    generic,   linux-generic,            *sa_hwe_t]
     - [trusty,  arm64,   *xguboot, generic,   linux-generic,            [*xguboot],
        {suffix: .xgene, kihelper: kh-xgene, di-format: 'xgene'}]
+    - [trusty,  arm64,   *xgmstuboot, generic,   linux-generic,            [*xgmstuboot],
+       {suffix: .xgene-mustang, kihelper: kh-xgene, di-format: 'xgene'}]
 #    - [utopic,  i386,    hwe-u,    generic,  linux-generic-lts-utopic,  *sa_hwe_u]
 #    - [utopic,  amd64,   hwe-u,    generic,  linux-generic-lts-utopic,  *sa_hwe_u]
 
