--- a/conf/meph-v2.yaml
+++ b/conf/meph-v2.yaml
@@ -57,7 +57,7 @@ releases:
     - [trusty,  arm64,   *xguboot, generic,   linux-generic,            [*xguboot],
        {suffix: .xgene, kihelper: kh-xgene, di-format: 'xgene'}]
     - [trusty,  arm64,   *mustang, generic,   linux-generic,            [*mustang],
-       {suffix: .xgene-mustang, kihelper: kh-xgene, di-format: 'xgene'}]
+       {suffix: .xgene-mustang, kihelper: kh-xgene, di-format: 'xgene', dtb: 'apm-mustang.dtb'}]
     - [utopic,  i386,    hwe-u,    generic,  linux-generic-lts-utopic,  *sa_hwe_u]
     - [utopic,  amd64,   hwe-u,    generic,  linux-generic-lts-utopic,  *sa_hwe_u]
 
