--- a/conf/meph-v2.yaml
+++ b/conf/meph-v2.yaml
@@ -35,6 +35,8 @@ releases:
     - [vivid,   amd64,   hwe-v,    generic,   linux-generic,            *sa_hwe_v]
     - [vivid,   ppc64el, hwe-v,    generic,   linux-generic,            *sa_hwe_v]
     - [vivid,   arm64,   hwe-v,    generic,   linux-generic,            *sa_hwe_v]
+    - [vivid,   arm64,   *xguboot, generic,   linux-generic,            [*xguboot],
+       {suffix: .xgene, kihelper: kh-xgene, di-format: 'xgene'}]
  - version: 14.10
    release: utopic
    kernels:
@@ -44,6 +46,8 @@ releases:
     - [utopic,  amd64,   hwe-u,    generic,   linux-generic,            *sa_hwe_u]
     - [utopic,  ppc64el, hwe-u,    generic,   linux-generic,            *sa_hwe_u]
     - [utopic,  arm64,   hwe-u,    generic,   linux-generic,            *sa_hwe_u]
+    - [utopic,  arm64,   *xguboot, generic,   linux-generic,            [*xguboot],
+       {suffix: .xgene, kihelper: kh-xgene, di-format: 'xgene'}]
  - version: 14.04
    release: trusty
    kernels:
