Add Mustang to Utopic and Vivid.
bzr-revno: 202.1.1

--- a/conf/meph-v2.yaml
+++ b/conf/meph-v2.yaml
@@ -37,6 +37,9 @@ releases:
     - [vivid,   arm64,   hwe-v,    generic,   linux-generic,            *sa_hwe_v]
     - [vivid,   arm64,   *xguboot, generic,   linux-generic,            [*xguboot],
        {suffix: .xgene, kihelper: kh-xgene, di-format: 'xgene'}]
+    - [trusty,  arm64,   *mustang, generic,   linux-generic,            [*mustang],
+       {suffix: .xgene-mustang, kihelper: kh-xgene, di-format: 'xgene',
+        dtb: 'apm-mustang.dtb'}]
  - version: 14.10
    release: utopic
    kernels:
@@ -48,6 +51,9 @@ releases:
     - [utopic,  arm64,   hwe-u,    generic,   linux-generic,            *sa_hwe_u]
     - [utopic,  arm64,   *xguboot, generic,   linux-generic,            [*xguboot],
        {suffix: .xgene, kihelper: kh-xgene, di-format: 'xgene'}]
+    - [trusty,  arm64,   *mustang, generic,   linux-generic,            [*mustang],
+       {suffix: .xgene-mustang, kihelper: kh-xgene, di-format: 'xgene',
+        dtb: 'apm-mustang.dtb'}]
  - version: 14.04
    release: trusty
    kernels:
