--- a/conf/meph-v2.yaml
+++ b/conf/meph-v2.yaml
@@ -24,6 +24,8 @@ misc:
  - &glpae generic-lpae
  - &xguboot xgene-uboot
  - &mustang xgene-uboot-mustang
+ - &mustangki {suffix: .xgene-mustang, kihelper: kh-xgene,
+               di-format: 'xgene', dtb: 'apm-mustang.dtb'}
 
 releases:
  - version: 15.04
@@ -37,9 +39,7 @@ releases:
     - [vivid,   arm64,   hwe-v,    generic,   linux-generic,            *sa_hwe_v]
     - [vivid,   arm64,   *xguboot, generic,   linux-generic,            [*xguboot],
        {suffix: .xgene, kihelper: kh-xgene, di-format: 'xgene'}]
-    - [vivid,  arm64,   *mustang, generic,   linux-generic,            [*mustang],
-       {suffix: .xgene-mustang, kihelper: kh-xgene, di-format: 'xgene',
-        dtb: 'apm-mustang.dtb'}]
+    - [vivid,  arm64,   *mustang, generic,   linux-generic,            [*mustang], *mustangki]
  - version: 14.10
    release: utopic
    kernels:
@@ -51,9 +51,7 @@ releases:
     - [utopic,  arm64,   hwe-u,    generic,   linux-generic,            *sa_hwe_u]
     - [utopic,  arm64,   *xguboot, generic,   linux-generic,            [*xguboot],
        {suffix: .xgene, kihelper: kh-xgene, di-format: 'xgene'}]
-    - [utopic,  arm64,   *mustang, generic,   linux-generic,            [*mustang],
-       {suffix: .xgene-mustang, kihelper: kh-xgene, di-format: 'xgene',
-        dtb: 'apm-mustang.dtb'}]
+    - [utopic,  arm64,   *mustang, generic,   linux-generic,            [*mustang], *mustangki]
  - version: 14.04
    release: trusty
    kernels:
@@ -66,9 +64,7 @@ releases:
     - [trusty,  arm64,   hwe-t,    generic,   linux-generic,            *sa_hwe_t]
     - [trusty,  arm64,   *xguboot, generic,   linux-generic,            [*xguboot],
        {suffix: .xgene, kihelper: kh-xgene, di-format: 'xgene'}]
-    - [trusty,  arm64,   *mustang, generic,   linux-generic,            [*mustang],
-       {suffix: .xgene-mustang, kihelper: kh-xgene, di-format: 'xgene',
-        dtb: 'apm-mustang.dtb'}]
+    - [trusty,  arm64,   *mustang, generic,   linux-generic,            [*mustang], *mustangki]
     - [utopic,  amd64,   hwe-u,    generic,  linux-generic-lts-utopic,  *sa_hwe_u]
     - [utopic,  arm64,   hwe-u,    generic,  linux-generic-lts-utopic,  *sa_hwe_u]
     - [utopic,  armhf,   hwe-u,    generic,  linux-generic-lts-utopic,  *sa_hwe_u]
