--- a/conf/meph-v2.yaml
+++ b/conf/meph-v2.yaml
@@ -24,8 +24,9 @@ misc:
  - &glpae generic-lpae
  - &xguboot xgene-uboot
  - &mustang xgene-uboot-mustang
- - &mustangki {suffix: .xgene-mustang, kihelper: kh-xgene,
+ - &kh-mustang {suffix: .xgene-mustang, kihelper: kh-xgene,
                di-format: 'xgene', dtb: 'apm-mustang.dtb'}
+ - &kh-xgene   {suffix: .xgene, kihelper: "kh-xgene", di-format: 'xgene'}
 
 releases:
  - version: 15.04
@@ -37,9 +38,8 @@ releases:
     - [vivid,   amd64,   hwe-v,    generic,   linux-generic,            *sa_hwe_v]
     - [vivid,   ppc64el, hwe-v,    generic,   linux-generic,            *sa_hwe_v]
     - [vivid,   arm64,   hwe-v,    generic,   linux-generic,            *sa_hwe_v]
-    - [vivid,   arm64,   *xguboot, generic,   linux-generic,            [*xguboot],
-       {suffix: .xgene, kihelper: kh-xgene, di-format: 'xgene'}]
-    - [vivid,  arm64,   *mustang, generic,   linux-generic,            [*mustang], *mustangki]
+    - [vivid,   arm64,   *xguboot, generic,   linux-generic,            [*xguboot], *kh-xgene]
+    - [vivid,  arm64,   *mustang, generic,   linux-generic,            [*mustang], *kh-mustang]
  - version: 14.10
    release: utopic
    kernels:
@@ -49,9 +49,8 @@ releases:
     - [utopic,  amd64,   hwe-u,    generic,   linux-generic,            *sa_hwe_u]
     - [utopic,  ppc64el, hwe-u,    generic,   linux-generic,            *sa_hwe_u]
     - [utopic,  arm64,   hwe-u,    generic,   linux-generic,            *sa_hwe_u]
-    - [utopic,  arm64,   *xguboot, generic,   linux-generic,            [*xguboot],
-       {suffix: .xgene, kihelper: kh-xgene, di-format: 'xgene'}]
-    - [utopic,  arm64,   *mustang, generic,   linux-generic,            [*mustang], *mustangki]
+    - [utopic,  arm64,   *xguboot, generic,   linux-generic,            [*xguboot], *kh-xgene]
+    - [utopic,  arm64,   *mustang, generic,   linux-generic,            [*mustang], *kh-mustang]
  - version: 14.04
    release: trusty
    kernels:
@@ -62,9 +61,8 @@ releases:
     - [trusty,  amd64,   hwe-t,    generic,   linux-generic,            *sa_hwe_t]
     - [trusty,  ppc64el, hwe-t,    generic,   linux-generic,            *sa_hwe_t]
     - [trusty,  arm64,   hwe-t,    generic,   linux-generic,            *sa_hwe_t]
-    - [trusty,  arm64,   *xguboot, generic,   linux-generic,            [*xguboot],
-       {suffix: .xgene, kihelper: kh-xgene, di-format: 'xgene'}]
-    - [trusty,  arm64,   *mustang, generic,   linux-generic,            [*mustang], *mustangki]
+    - [trusty,  arm64,   *xguboot, generic,   linux-generic,            [*xguboot], *kh-xgene]
+    - [trusty,  arm64,   *mustang, generic,   linux-generic,            [*mustang], *kh-mustang]
     - [utopic,  amd64,   hwe-u,    generic,  linux-generic-lts-utopic,  *sa_hwe_u]
     - [utopic,  arm64,   hwe-u,    generic,  linux-generic-lts-utopic,  *sa_hwe_u]
     - [utopic,  armhf,   hwe-u,    generic,  linux-generic-lts-utopic,  *sa_hwe_u]
