cloudimg-sync: support 'enable_proposed' for mining d-i data from -proposed
This does not yet support adding -proposed to an image's apt sources
so that you could find kernel images from -proposed.

It does, though support getting d-i data fom -proposed mirror locations.
This is sufficient for the case (that is true right now) where
linux-lts-vivid is available in -updates of trusty, but the d-i kernels are
still in -proposed.

To enable this, just add 'enable_proposed: True' in conf/meph-v2.yaml.

bzr-revno: 221

--- a/conf/meph-v2.yaml
+++ b/conf/meph-v2.yaml
@@ -108,6 +108,8 @@ releases:
     - [trusty,  i386,    hwe-t,    generic,  linux-generic-lts-trusty,  *sa_hwe_t]
     - [trusty,  amd64,   hwe-t,    generic,  linux-generic-lts-trusty,  *sa_hwe_t]
 
+# enable_proposed: True
+
 ## Notes:
 ##  * there are no hwe installer kernels for armhf
 ##    nothing named 'saucy-highbank' at
