tox: run make 'meph2-util' in minimal python3 environment
The last merge caused meph2-util to fail to run on our build environment.
This adds a very minimal test that would have actually failed there.

We just run meph2-util in the tox env.  The imports of yaml and of
requests would have caused this to fail previously.

bzr-revno: 237

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = flake8
+envlist = flake8,jerff
 recreate = True
 
 [testenv]
@@ -12,5 +12,11 @@ deps =
 setenv =
     LC_ALL = C
 
+[testenv:jerff]
+# the 'jerff' environment simulates what is on the build system
+# it has very few dependencies, but must be able to run meph2-util
+commands = {toxinidir}/bin/meph2-util --help
+
 [testenv:flake8]
+envdir = {toxworkdir}/jerff
 commands = flake8 -v .
