meph-v2.yaml: fix missing declaration of builtin_kernel for vivid
vivid did not get updated to have 'builtin_kernel'.

bzr-revno: 260

--- a/conf/meph-v2.yaml
+++ b/conf/meph-v2.yaml
@@ -61,6 +61,7 @@ releases:
     - [wily,    arm64,   *mustang, generic,   linux-generic,            [*mustang], *kh-mustang]
  - version: 15.04
    release: vivid
+   builtin_kernel: linux-generic
    kernels:
     - [vivid,   armhf,   hwe-v,    generic,   linux-generic,            *arm_hwe_v]
     - [vivid,   armhf,   *glpae,   *glpae,    linux-generic-lpae,       [*glpae]]
