add unit tests of file_item_data
file_item_data gets initrd and kernel and some information
out of the paths that are found in archive locations.

This committs results as they were, (obtained by wrapping
the function call and recording results) and then a unit test
to ensure they are that way.

bzr-revno: 272.1.2

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = flake8,jerff
+envlist = flake8,jerff,nose3
 recreate = True
 
 [testenv]
@@ -20,3 +20,8 @@ commands = {toxinidir}/bin/meph2-util --help
 [testenv:flake8]
 envdir = {toxworkdir}/jerff
 commands = flake8 -v .
+
+[testenv:nose3]
+deps = {[testenv]deps}
+     nose
+commands = nosetests3 tests/unittests
