flake8 and tox fixes. 'tox' works now.
bzr-revno: 272.1.7

--- a/tox.ini
+++ b/tox.ini
@@ -22,6 +22,8 @@ envdir = {toxworkdir}/jerff
 commands = flake8 -v .
 
 [testenv:nose3]
-deps = {[testenv]deps}
-     nose
-commands = nosetests3 tests/unittests
+deps = 
+    {[testenv]deps}
+    distro_info
+    nose
+commands = {envpython} -m nose tests/unittests
