conf/meph-v2.yaml: fix arm_hwe_x to list hwe-w subarch support.
Generated streams did not mention that 16.04 arm builds supported
hwe-w subarch.

bzr-revno: 288

--- a/conf/meph-v2.yaml
+++ b/conf/meph-v2.yaml
@@ -25,7 +25,7 @@ subarches:
  - &arm_hwe_u [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u]
  - &arm_hwe_v [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v]
  - &arm_hwe_w [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w]
- - &arm_hwe_x [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-x]
+ - &arm_hwe_x [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, hwe-x]
 
 misc:
  - &glpae generic-lpae
