--- a/conf/meph-v2.yaml
+++ b/conf/meph-v2.yaml
@@ -36,6 +36,18 @@ misc:
  - &kh-xgene   {suffix: .xgene, kihelper: "kh-xgene", di-format: 'xgene'}
 
 releases:
+ - version: "16.10"
+   release: yakkety
+   kernels:
+    - [xenial,  amd64,   hwe-y,    generic,   linux-generic,            *sa_hwe_y]
+    - [xenial,  arm64,   hwe-y,    generic,   linux-generic,            *sa_hwe_y]
+    - [xenial,  arm64,   *mustang, generic,   linux-generic,            [*mustang], *kh-mustang]
+    - [xenial,  arm64,   *xguboot, generic,   linux-generic,            [*xguboot], *kh-xgene]
+    - [xenial,  armhf,   *glpae,   *glpae,    linux-generic-lpae,       [*glpae]]
+    - [xenial,  armhf,   hwe-y,    generic,   linux-generic,            *arm_hwe_y]
+    - [xenial,  i386,    hwe-y,    generic,   linux-generic,            *sa_hwe_y]
+    - [xenial,  ppc64el, hwe-y,    generic,   linux-generic,            *sa_hwe_y]
+    - [xenial,  s390x,   hwe-y,    generic,   linux-generic,            *sa_hwe_y]
  - version: "16.04"
    release: xenial
    kernels:
