--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,9 @@ setenv =
 [testenv:jerff]
 # the 'jerff' environment simulates what is on the build system
 # it has very few dependencies, but must be able to run meph2-util
+deps =
+    {[testenv]deps}
+    distro_info
 commands = {toxinidir}/bin/meph2-util --help
 
 [testenv:flake8]
