revert 'Add clean-unsupported command to meph2-utils'
the revision 301 added a dependency for meph2-utils on 
python3-distro-info which is not available on one of the build systems.
I'm reverting that commit and also removing 'distro-info' module
from the tox test environment for jerff so that if simply re-added
the tox test would correctly fail.

I've opened bug 1589559 to address re-adding the content in a
way that does not break things.

bzr-revno: 302

--- a/tox.ini
+++ b/tox.ini
@@ -16,8 +16,8 @@ setenv =
 # the 'jerff' environment simulates what is on the build system
 # it has very few dependencies, but must be able to run meph2-util
 deps =
-    {[testenv]deps}
-    distro_info
+    pyyaml
+    bzr+lp:simplestreams
 commands = {toxinidir}/bin/meph2-util --help
 
 [testenv:flake8]
