--- a/conf/bootloaders.yaml
+++ b/conf/bootloaders.yaml
@@ -1,6 +1,7 @@
 product_id: "com.ubuntu.maas.daily:bootloaders-bases:{bootloader}"
 content_id: "com.ubuntu.maas:daily:bootloaders-bases-download"
 
+# The release to pull the packages from
 release: xenial
 bootloaders:
  - bootloader: pxe
