--- a/conf/bootloaders.yaml
+++ b/conf/bootloaders.yaml
@@ -1,7 +1,7 @@
 product_id: "com.ubuntu.maas.daily:bootloaders-bases:{bootloader}"
 content_id: "com.ubuntu.maas:daily:bootloaders-bases-download"
 
-# The release to pull the packages from
+# The release to pull the packages from, can be overridden by the bootloader
 release: xenial
 bootloaders:
  - bootloader: pxe
