tox.ini: tweaks
 * recreate: do not recreate tox environments on every 'tox' run.
 * create separate tox environments rather than re-using via
   declaring the 'envdir'
 * flake8: list the directories to run flake8 on so it does
   not attempt to run on .tox/

bzr-revno: 311

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,13 @@
 [tox]
 envlist = flake8,jerff,nose3
-recreate = True
+recreate = False
 
 [testenv]
 basepython=python3
 deps =
-     flake8
-     pyyaml
      bzr+lp:simplestreams
+     pyyaml
+     distro_info
 
 setenv =
     LC_ALL = C
@@ -15,18 +15,19 @@ setenv =
 [testenv:jerff]
 # the 'jerff' environment simulates what is on the build system
 # it has very few dependencies, but must be able to run meph2-util
+# we explicitly list those dependencies here.
 deps =
     pyyaml
     bzr+lp:simplestreams
 commands = {toxinidir}/bin/meph2-util --help
 
 [testenv:flake8]
-envdir = {toxworkdir}/jerff
-commands = flake8 -v .
+deps = {[testenv]deps}
+   flake8
+commands = {envpython} -m flake8 {posargs:bin/ curtin/ meph2/ tests/}
 
 [testenv:nose3]
 deps = 
     {[testenv]deps}
-    distro_info
     nose
 commands = {envpython} -m nose tests/unittests
