Put os in bootloader product name
bzr-revno: 322.3.2

--- a/conf/bootloaders.yaml
+++ b/conf/bootloaders.yaml
@@ -1,4 +1,4 @@
-product_id: "com.ubuntu.maas.daily:1:bootloader:{firmware_platform}:{arch}"
+product_id: "com.ubuntu.maas.daily:1:{os}:{firmware_platform}:{arch}"
 content_id: "com.ubuntu.maas:daily:1:bootloader-download"
 
 bootloaders:
