conf/ add vi info showing yaml and nowrap
This just sets syntax highlightin explicitly to yaml and also sets nowrap,
which is useful for viewing the long lines in meph-v2.yaml and meph-v3.yaml.

bzr-revno: 322.1.1

--- a/conf/bootloaders.yaml
+++ b/conf/bootloaders.yaml
@@ -54,3 +54,5 @@ bootloaders:
    grub_config: |
       configfile (pxe)/grub/grub.cfg-${net_default_mac}
       configfile (pxe)/grub/grub.cfg-default-ppc64el
+
+# vi: syntax=yaml nowrap
